--- a/blog/.env.example
+++ b/blog/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=UGP
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gP7vM0NyYwjmCa0VUiV78N06AsXdUbNepFeO2Gzo3m8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=prescriptions
+DB_USERNAME=prescripteur
+DB_PASSWORD=prescripteur
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=teourisamrou@gmail.com
+MAIL_PASSWORD=kaqncqvikozomwbm
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=teourisamrou@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
