--- a/blog/composer.json
+++ b/blog/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.4",
+        "maatwebsite/excel": "3.1.30",
         "symfony/mailer": "^6.1"
     },
     "require-dev": {
