ajout d'ajax dans la création des sites

--- a/blog/.env.example
+++ b/blog/.env.example
@@ -2,7 +2,7 @@ APP_NAME=UGP
 APP_ENV=local
 APP_KEY=base64:gP7vM0NyYwjmCa0VUiV78N06AsXdUbNepFeO2Gzo3m8=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -17,7 +17,7 @@ DB_PASSWORD=prescripteur
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
